--- a/gulp/package.json
+++ b/gulp/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "gulp": "^3.9.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-sass": "^2.3.2",
+    "jade": "^1.11.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
