--- a/gulp/package.json
+++ b/gulp/package.json
@@ -7,8 +7,16 @@
     "gulp": "^3.9.1"
   },
   "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "browser-sync": "^2.17.5",
+    "gulp-babel": "^6.1.2",
+    "gulp-file-cache": "0.0.1",
+    "gulp-nodemon": "^2.2.1",
     "gulp-sass": "^2.3.2",
-    "jade": "^1.11.0"
+    "gulp-webpack": "^1.5.0",
+    "jade": "^1.11.0",
+    "webpack": "^1.13.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
